--- a/The Mission.csproj
+++ b/The Mission.csproj
@@ -136,5 +136,8 @@
   <ItemGroup>
     <Resource Include="dungeon01.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\ToDoList.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
